# cpp_jit-emulator

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: cpu_registers.h  emulator.h  emulator_cpu.h  icpu.h  manual_cpu.h  memory.h  raw_emulator.h
src/: emulator.cpp  emulator_cpu.cpp  main.cpp  manual_cpu.cpp  memory.cpp  raw_emulator.cpp
